Exemplos XMLHTTPRequest, Fetch e CSS Loader

--- a/insereimc.html
+++ b/insereimc.html
@@ -17,7 +17,7 @@
         <br>Peso:<input type="number" name="peso" step="0.1">
         <br><input type="submit">
     </form>
-    <script src="insereimc.js" async defer></script>
+    <script src="js/insereimc.js" async defer></script>
 </body>
 
 </html>
