--- a/loadfetch.html
+++ b/loadfetch.html
@@ -7,12 +7,17 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/loaderliner.css">
 </head>
 
 <body>
+    
+    
 
-    <script src="js/lerhtml.js" async defer></script>
+    <button onclick="fetchData()">Load data</button>
+    <div class="container-load"><div id="loading"></div></div>
+    <div id='data'></div>
+    <script src="js/loadfetch.js" async defer></script>
 </body>
 
 </html>
