exemplos com correções da aula dia 13/09

--- a/listarxhr.html
+++ b/listarxhr.html
@@ -13,7 +13,7 @@
 <body>
     <button onclick="carregaDados()">Mostrar Dados</button>
     <div id='dados'></div>
-    <script src="js/listarxhr.js" async defer></script>
+    <script src="js/listarxhr.js" ></script>
 </body>
 
 </html>
