--- a/loadfetch.html
+++ b/loadfetch.html
@@ -7,7 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/loaderliner.css">
 </head>
 
 <body>
