Aula 13 : XHR, Promises, Fetch e Axios

--- a/loadfetch.html
+++ b/loadfetch.html
@@ -15,7 +15,7 @@
     <button onclick="fetchData()">Load data</button>
     <div class="container-load"><div id="loading"></div></div>
     <div id='data'></div>
-    <script src="js/loadfetch.js" async defer></script>
+    <script src="js/loadfetch.js" ></script>
 </body>
 
 </html>
