Exemplos Upload de Arquivos

--- a/uploadArquivo.html
+++ b/uploadArquivo.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <form name='cadastro' method='post'>
+    <form name='cadastro' method='post' enctype="multipart/form-data">
         Nome:<input type="text" name="nome">
         <br>Altura:<input type="number" name="alt" step="0.1">
         <br>Peso:<input type="number" name="peso" step="0.1">
