--- a/uploadArquivoAxios.html
+++ b/uploadArquivoAxios.html
@@ -15,7 +15,8 @@
         Nome:<input type="text" name="nome">
         <br>Altura:<input type="number" name="alt" step="0.1">
         <br>Peso:<input type="number" name="peso" step="0.1">
-        <input type="file" name="foto" id="foto">
+        <br><input type="file" name="foto" id="foto">
+        <div id='fotoselec'></div>
         <br><input type="submit">
     </form>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
