--- a/uploadArquivo.html
+++ b/uploadArquivo.html
@@ -16,9 +16,9 @@
         <br>Altura:<input type="number" name="alt" step="0.1">
         <br>Peso:<input type="number" name="peso" step="0.1">
         <input type="file" name="foto" id="foto">
+        <div id='fotoselec'></div>
         <br><input type="submit">
     </form>
     <script src="js/uploadarquivo.js" async defer></script>
 </body>
-
 </html>
