Exemplo Upload com Ajax da jQuery

--- a/uploadArquivojQuery.html
+++ b/uploadArquivojQuery.html
@@ -16,12 +16,13 @@
         <br>Altura:<input type="number" name="alt" step="0.1">
         <br>Peso:<input type="number" name="peso" step="0.1">
         <input type="file" name="foto" id="foto">
+        <div id='fotoselec'></div>
         <br><input type="submit">
     </form>
     <script
-  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-  crossorigin="anonymous"></script>
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			  crossorigin="anonymous"></script>
     <script src="js/uploadarquivo_jquery.js" async defer></script>
 </body>
 
